--- a/nuget.config
+++ b/nuget.config
@@ -3,6 +3,7 @@
     <packageSources>
         <clear />
         <add key="Bot Feed" value="https://pkgs.dev.azure.com/ConversationalAI/BotFramework/_packaging/SDK/nuget/v3/index.json" />
+        <add key="Nuget.org" value="https://api.nuget.org/v3/index.json" />
     </packageSources>
     <disabledPackageSources>
         <clear />
