--- a/nuget.config
+++ b/nuget.config
@@ -2,8 +2,7 @@
 <configuration>
     <packageSources>
         <clear />
-        <add key="Bot Feed" value="https://pkgs.dev.azure.com/ConversationalAI/BotFramework/_packaging/SDK/nuget/v3/index.json" />
-        <add key="Nuget.org" value="https://api.nuget.org/v3/index.json" />
+        <add key="Power-Fx" value="https://msazure.pkgs.visualstudio.com/_packaging/Power-Fx/nuget/v3/index.json" />
     </packageSources>
     <disabledPackageSources>
         <clear />
