--- a/src/PowerFx.Dataverse.Tests/PowerFx.Dataverse.Tests.csproj
+++ b/src/PowerFx.Dataverse.Tests/PowerFx.Dataverse.Tests.csproj
@@ -16,6 +16,8 @@
     <RunSettingsFilePath>$(MSBuildProjectDirectory)\..\test.runsettings</RunSettingsFilePath>
   </PropertyGroup>
 
+  <Import Project="..\Build.props" />
+  
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.11.0" />
     <PackageReference Include="MSTest.TestAdapter" Version="2.1.0" />
@@ -28,10 +30,10 @@
     <PackageReference Include="System.Data.SqlClient" Version="4.6.1" />
     <PackageReference Include="Microsoft.PowerPlatform.Dataverse.Client" Version="0.6.6" />
     <PackageReference Include="System.Runtime" Version="4.3.0" />
-    <PackageReference Include="Microsoft.PowerFx.Core" Version="0.2.3-preview.20221107-7" />
-    <PackageReference Include="Microsoft.PowerFx.Interpreter" Version="0.2.3-preview.20221107-7" />
-    <PackageReference Include="Microsoft.PowerFx.Core.Tests" Version="0.2.3-preview.20221107-7" GeneratePathProperty="true" />
-    <PackageReference Include="Microsoft.PowerFx.LanguageServerProtocol" Version="0.2.3-preview.20221107-7" />
+    <PackageReference Include="Microsoft.PowerFx.Core" Version="$(PowerFxVersion)" />
+    <PackageReference Include="Microsoft.PowerFx.Interpreter" Version="$(PowerFxVersion)" />
+    <PackageReference Include="Microsoft.PowerFx.Core.Tests" Version="$(PowerFxVersion)" GeneratePathProperty="true" />
+    <PackageReference Include="Microsoft.PowerFx.LanguageServerProtocol" Version="$(PowerFxVersion)" />
   </ItemGroup>
 
   <ItemGroup>    
