--- a/.github/workflows/official.yml
+++ b/.github/workflows/official.yml
@@ -1,19 +1,19 @@
-name: CI
+name: Offical
 
 # Run this workflow every time a commit gets pushed to main or a pull request gets opened against main
 on:
-  pull_request:
-    branches: 
+  push:
+    branches:
       - main
 
 jobs:
     build:
-        name: Pull Request Validation Pipeline
+        name: Official Pipeline
         runs-on: ubuntu-latest
         steps:
         - name: Azure Pipelines Action
           uses: Azure/pipelines@v1
           with:
             azure-devops-project-url: https://msazure.visualstudio.com/DefaultCollection/OneAgile
-            azure-pipeline-name: 'Power Fx-Dataverse-PullRequest'
+            azure-pipeline-name: 'Power Fx-Dataverse-Official'
             azure-devops-token: ${{ secrets.AZURE_DEVOPS_TOKEN }}
