--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -1,4 +1,4 @@
-name: CI
+name: Pull Request
 
 # Run this workflow every time a commit gets pushed to main or a pull request gets opened against main
 on:
