--- a/src/Build.props
+++ b/src/Build.props
@@ -1,8 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project>
 
+    <!-- 0.2.3-preview.20230118-1002 -->
   <PropertyGroup>
-    <PowerFxVersion>0.2.3-preview.20230118-1002</PowerFxVersion>
+    <PowerFxVersion>0.2.3-preview.20230125-1003</PowerFxVersion>
     <DataverseParserVersion>0.1.0-ci-20230118-67296243</DataverseParserVersion>
   </PropertyGroup>
 
