--- a/nuget.config
+++ b/nuget.config
@@ -2,7 +2,7 @@
 <configuration>  
   <packageSources>
     <clear />
-    <add key="Power-Fx" value="https://msazure.pkgs.visualstudio.com/_packaging/Power-Fx/nuget/v3/index.json" />
+	  <add key="Local" value="C:\Users\jasvalgotar\source\repos\Power-FX\src\outputpackages" />
   </packageSources>
   <disabledPackageSources>
     <clear />
