--- a/src/Build.props
+++ b/src/Build.props
@@ -2,8 +2,10 @@
 <Project>
 
   <PropertyGroup>
-	  <PowerFxVersion>0.2.3-preview.20230329-1003</PowerFxVersion>
-    <DataverseParserVersion>0.1.0-ci-20230313-70017436</DataverseParserVersion>
+	  <PowerFxVersion>0.3.0-local</PowerFxVersion>
+      
+      <!-- https://msazure.visualstudio.com/OneAgile/_artifacts/feed/PowerApps-Studio-Official/NuGet/Microsoft.PowerFx.Dataverse.Parser       -->
+    <DataverseParserVersion>0.1.0-ci-20230403-71123572</DataverseParserVersion>
   </PropertyGroup>
 
 </Project>
