Picking up fixes from Power-Fx repo (#140)
* Picking up fixes from Power-Fx repo

* Latest Power-Fx build

--- a/src/Build.props
+++ b/src/Build.props
@@ -1,8 +1,8 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project>
 
   <PropertyGroup>
-	  <PowerFxVersion>0.2.3-preview.20230406-1005</PowerFxVersion>
+	  <PowerFxVersion>0.2.3-preview.20230407-1007</PowerFxVersion>
       
       <!-- https://msazure.visualstudio.com/OneAgile/_artifacts/feed/PowerApps-Studio-Official/NuGet/Microsoft.PowerFx.Dataverse.Parser       -->
     <DataverseParserVersion>0.1.0-ci-20230403-71123572</DataverseParserVersion>
