--- a/src/PowerFx.Dataverse.Tests/PowerFx.Dataverse.Tests.csproj
+++ b/src/PowerFx.Dataverse.Tests/PowerFx.Dataverse.Tests.csproj
@@ -14,6 +14,15 @@
     <NoWarn>1701;1702;1998</NoWarn>
     <LangVersion>9.0</LangVersion>
     <RunSettingsFilePath>$(MSBuildProjectDirectory)\..\test.runsettings</RunSettingsFilePath>
+    <PlatformTarget>AnyCPU</PlatformTarget>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DebugType>full</DebugType>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <DebugType>full</DebugType>
   </PropertyGroup>
 
   <Import Project="..\Build.props" />
