--- a/src/Build.props
+++ b/src/Build.props
@@ -2,10 +2,18 @@
 <Project>
 
   <PropertyGroup>
-	  <PowerFxVersion>0.2.3-preview.20230525-1005</PowerFxVersion>
-      
-      <!-- https://msazure.visualstudio.com/OneAgile/_artifacts/feed/PowerApps-Studio-Official/NuGet/Microsoft.PowerFx.Dataverse.Parser       -->
+	  <PowerFxVersion>0.2.3-preview.20230525-1005</PowerFxVersion>      
+     <!-- https://msazure.visualstudio.com/OneAgile/_artifacts/feed/PowerApps-Studio-Official/NuGet/Microsoft.PowerFx.Dataverse.Parser       -->
     <DataverseParserVersion>0.1.0-ci-20230415-71765385</DataverseParserVersion>
   </PropertyGroup>
+
+	<PropertyGroup>
+		<SignAssembly>true</SignAssembly>
+		<DelaySign>true</DelaySign>
+		<AssemblyOriginatorKeyFile>..\35MSSharedLib1024.snk</AssemblyOriginatorKeyFile>
+		<DebugType>Full</DebugType>
+		<DebugSymbols>true</DebugSymbols>
+		<LangVersion>9.0</LangVersion>
+	</PropertyGroup>
 
 </Project>
