--- a/src/PowerFx.Dataverse.Eval/Microsoft.PowerFx.Dataverse.Eval.csproj
+++ b/src/PowerFx.Dataverse.Eval/Microsoft.PowerFx.Dataverse.Eval.csproj
@@ -6,12 +6,8 @@
     <Configurations>Debug;Release</Configurations>
   </PropertyGroup>
 
-  <PropertyGroup>
-    <SignAssembly>true</SignAssembly>
-    <DelaySign>true</DelaySign>
-    <AssemblyOriginatorKeyFile>..\35MSSharedLib1024.snk</AssemblyOriginatorKeyFile>
-    <NoWarn>1702;1998;NU5104;NU1701</NoWarn>
-    <LangVersion>9.0</LangVersion>
+  <PropertyGroup>    
+    <NoWarn>1702;1998;NU5104;NU1701</NoWarn>    
   </PropertyGroup>
 
   <!-- Nuget Properties -->
@@ -32,9 +28,8 @@
     <PackageReference Include="System.Text.Json" Version="6.0.2" />
     <PackageReference Include="System.Collections.Immutable" Version="5.0.0" />
     <PackageReference Include="System.ServiceModel.Primitives" Version="4.10.0" />
-    <PackageReference Include="System.Memory" Version="4.5.4" />
-    <PackageReference Include="Microsoft.PowerFx.Core" Version="$(PowerFxVersion)" />
-		<PackageReference Include="Microsoft.PowerFx.Interpreter" Version="$(PowerFxVersion)" />
+    <PackageReference Include="System.Memory" Version="4.5.4" />    
+    <PackageReference Include="Microsoft.PowerFx.Connectors" Version="$(PowerFxVersion)" />
     <PackageReference Include="Microsoft.CrmSdk.CoreAssemblies" Version="9.0.2.33">      
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
