--- a/src/tools/Repl/Repl.csproj
+++ b/src/tools/Repl/Repl.csproj
@@ -7,6 +7,7 @@
     <GenerateDocumentationFile>false</GenerateDocumentationFile>
     <Configurations>Debug;Release</Configurations>
     <OutputType>Exe</OutputType>
+		<LangVersion>9.0</LangVersion>
   </PropertyGroup>
 
   <Import Project="..\..\Build.props" />  
