--- a/src/PowerFx.Dataverse/PowerFx.Dataverse.csproj
+++ b/src/PowerFx.Dataverse/PowerFx.Dataverse.csproj
@@ -29,10 +29,7 @@
   <Import Project="..\Build.props" />
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.PowerFx.Dataverse.Parser" Version="$(DataverseParserVersion)" />
-    <PackageReference Include="System.Security.Cryptography.Pkcs" Version="6.0.3">
-      <NoWarn>NU1605</NoWarn>
-    </PackageReference> <!-- CVE-2023-29331 -->
+    <PackageReference Include="Microsoft.PowerFx.Dataverse.Parser" Version="$(DataverseParserVersion)" /> <!-- CVE-2023-29331 -->
     <PackageReference Include="System.Text.Json" Version="6.0.8" />
     <PackageReference Include="System.Collections.Immutable" Version="6.0.0" />
     <PackageReference Include="Microsoft.PowerFx.Core" Version="$(PowerFxVersion)" />
