--- a/src/PowerFx.Dataverse.Eval/Microsoft.PowerFx.Dataverse.Eval.csproj
+++ b/src/PowerFx.Dataverse.Eval/Microsoft.PowerFx.Dataverse.Eval.csproj
@@ -33,8 +33,8 @@
     <PackageReference Include="System.Collections.Immutable" Version="5.0.0" />
     <PackageReference Include="System.ServiceModel.Primitives" Version="4.10.0" />
     <PackageReference Include="System.Memory" Version="4.5.4" />
-    <PackageReference Include="Microsoft.PowerFx.Core" Version="$(PowerFxVersion)" />
-    <PackageReference Include="Microsoft.PowerFx.Connectors" Version="$(PowerFxVersion)" />
+    <PackageReference Include="Microsoft.PowerFx.Core" Version="0.2.7-preview.20230801-1004" />
+    <PackageReference Include="Microsoft.PowerFx.Connectors" Version="0.2.7-preview.20230801-1004" />
     <PackageReference Include="Microsoft.CrmSdk.CoreAssemblies" Version="9.0.2.33">      
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
