--- a/src/PowerFx.Dataverse.Tests/PowerFx.Dataverse.Tests.csproj
+++ b/src/PowerFx.Dataverse.Tests/PowerFx.Dataverse.Tests.csproj
@@ -27,10 +27,10 @@
     <PackageReference Include="System.Data.SqlClient" Version="4.8.5" /> <!-- CVE-2022-41064 -->
     <PackageReference Include="Microsoft.PowerPlatform.Dataverse.Client" Version="1.0.9" />
     <PackageReference Include="System.Runtime" Version="4.3.0" />
-    <PackageReference Include="Microsoft.PowerFx.Core" Version="$(PowerFxVersion)" />
-    <PackageReference Include="Microsoft.PowerFx.Interpreter" Version="$(PowerFxVersion)" />
-    <PackageReference Include="Microsoft.PowerFx.Core.Tests" Version="$(PowerFxVersion)" GeneratePathProperty="true" />
-    <PackageReference Include="Microsoft.PowerFx.LanguageServerProtocol" Version="$(PowerFxVersion)" />
+    <PackageReference Include="Microsoft.PowerFx.Core" Version="0.2.7-preview.20230801-1004" />
+    <PackageReference Include="Microsoft.PowerFx.Interpreter" Version="0.2.7-preview.20230801-1004" />
+    <PackageReference Include="Microsoft.PowerFx.Core.Tests" Version="0.2.7-preview.20230801-1004" GeneratePathProperty="true" />
+    <PackageReference Include="Microsoft.PowerFx.LanguageServerProtocol" Version="0.2.7-preview.20230801-1004" />
   </ItemGroup>
 
   <ItemGroup>    
