--- a/src/Build.props
+++ b/src/Build.props
@@ -2,26 +2,11 @@
 <Project>
 
   <PropertyGroup>
-    <!--https://github.com/microsoft/Power-Fx/commit/9055e5a1c021adb85f772ccc2c272157a4eb0804  -->
-    <PowerFxVersion>1.2.0-build.20231030-1002</PowerFxVersion>
-    
+    <!--https://github.com/microsoft/Power-Fx/commit/2d3d3eb558b25678e4b4fa08d5bac441ebf23387-->
+    <PowerFxVersion>0.3.0-local</PowerFxVersion>
+      
       <!-- https://msazure.visualstudio.com/OneAgile/_artifacts/feed/PowerApps-Studio-Official/NuGet/Microsoft.PowerFx.Dataverse.Parser       -->
-    <DataverseParserVersion>0.1.0-ci-20230930-80527585</DataverseParserVersion>
+    <DataverseParserVersion>0.1.0-ci-20230714-76422488</DataverseParserVersion>
   </PropertyGroup>
 
-  <PropertyGroup>
-    <!-- Rules found at: https://aka.ms/Microsoft-NuGet-Compliance -->
-    <PackageProjectUrl>https://aka.ms/PowerFxDataverseGithub</PackageProjectUrl>
-    <PackageIconUrl>https://raw.githubusercontent.com/microsoft/Power-Fx/main/src/libraries/Microsoft.PowerFx.Core/icon.png</PackageIconUrl>
-    <PackageLicenseExpression>MIT</PackageLicenseExpression>
-    <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
-    <PackageIcon>icon.png</PackageIcon>
-    <PackageTags>powerfx;dataverse</PackageTags>
-    <RepositoryType />
-  </PropertyGroup>
-
-  <ItemGroup>
-    <None Include="icon.png" Pack="true" PackagePath="\" />
-  </ItemGroup>
-  
 </Project>
