--- a/src/Build.props
+++ b/src/Build.props
@@ -3,7 +3,7 @@
 
   <PropertyGroup>
     <!--https://github.com/microsoft/Power-Fx/commit/83817fe0699b9fee1c0e50ddeccf1ee7b6273c07-->
-    <PowerFxVersion>0.2.7-preview.20230817-1002</PowerFxVersion>
+    <PowerFxVersion>0.3.0-local</PowerFxVersion>
       
       <!-- https://msazure.visualstudio.com/OneAgile/_artifacts/feed/PowerApps-Studio-Official/NuGet/Microsoft.PowerFx.Dataverse.Parser       -->
     <DataverseParserVersion>0.1.0-ci-20230714-76422488</DataverseParserVersion>
