--- a/nuget.config
+++ b/nuget.config
@@ -1,11 +1,10 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <packageSources>
     <clear />
-    <add key="Local" value="D:\repos\cetfs\src\outputpackages" />
+    <add key="Power-Fx" value="https://msazure.pkgs.visualstudio.com/_packaging/Power-Fx/nuget/v3/index.json" />
   </packageSources>
   <disabledPackageSources>
     <clear />
-    <add key="Power-Fx" value="true" />
   </disabledPackageSources>
 </configuration>
