--- a/src/tools/Repl/Repl.csproj
+++ b/src/tools/Repl/Repl.csproj
@@ -18,11 +18,11 @@
     <PackageReference Include="Microsoft.PowerFx.Json" Version="$(PowerFxVersion)" />
     <PackageReference Include="Microsoft.PowerPlatform.Dataverse.Client" Version="1.0.9" />
     <PackageReference Include="Microsoft.Rest.ClientRuntime" Version="2.3.24" /> <!-- CVE-2022-26907 -->
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\PowerFx.Dataverse.Eval\Microsoft.PowerFx.Dataverse.Eval.csproj" />
-    <ProjectReference Include="..\..\PowerFx.Dataverse.Tests\PowerFx.Dataverse.Tests.csproj" />
+    <ProjectReference Include="..\..\PowerFx.Dataverse.Eval\Microsoft.PowerFx.Dataverse.Eval.csproj" />    
   </ItemGroup>
 
 </Project>
