--- a/src/Build.props
+++ b/src/Build.props
@@ -3,7 +3,7 @@
 
   <PropertyGroup>
     <!--https://github.com/microsoft/Power-Fx/commit/2c506eb0fdfc8f5d3184031164b3c8c4963f388a-->
-    <PowerFxVersion>0.2.7-preview.20230829-1006</PowerFxVersion>
+    <PowerFxVersion>1.0.0-build.20230907-1004</PowerFxVersion>
       <!-- https://msazure.visualstudio.com/OneAgile/_artifacts/feed/PowerApps-Studio-Official/NuGet/Microsoft.PowerFx.Dataverse.Parser       -->
     <DataverseParserVersion>0.1.0-ci-20230714-76422488</DataverseParserVersion>
   </PropertyGroup>
