--- a/src/tools/Repl/Repl.csproj
+++ b/src/tools/Repl/Repl.csproj
@@ -20,6 +20,12 @@
     <PackageReference Include="Microsoft.Rest.ClientRuntime" Version="2.3.24" /> <!-- CVE-2022-26907 -->
   </ItemGroup>
 
+  <PropertyGroup>
+    <SignAssembly>true</SignAssembly>
+    <DelaySign>true</DelaySign>
+    <AssemblyOriginatorKeyFile>..\..\35MSSharedLib1024.snk</AssemblyOriginatorKeyFile>
+  </PropertyGroup>
+
   <ItemGroup>
     <ProjectReference Include="..\..\PowerFx.Dataverse.Eval\Microsoft.PowerFx.Dataverse.Eval.csproj" />
   </ItemGroup>
