--- a/nuget.config
+++ b/nuget.config
@@ -2,6 +2,7 @@
 <configuration>
   <packageSources>
     <clear />
+    <add key="Local" value="D:\dev\pa2\Power-Fx\src\outputpackages" />
     <add key="Power-Fx" value="https://msazure.pkgs.visualstudio.com/_packaging/Power-Fx/nuget/v3/index.json" />
   </packageSources>
   <disabledPackageSources>
