--- a/src/tools/Repl/Repl.csproj
+++ b/src/tools/Repl/Repl.csproj
@@ -18,6 +18,7 @@
     <PackageReference Include="Microsoft.PowerFx.Json" Version="$(PowerFxVersion)" NoWarn="NU1605"/>
     <PackageReference Include="Microsoft.PowerPlatform.Dataverse.Client" Version="1.0.9" />
     <PackageReference Include="Microsoft.Rest.ClientRuntime" Version="2.3.24" /> <!-- CVE-2022-26907 -->
+    <PackageReference Include="Microsoft.PowerFx.Repl" Version="$(PowerFxVersion)" NoWarn="NU1605"/>
   </ItemGroup>
 
   <PropertyGroup>
