--- a/src/PowerFx.Dataverse.Tests/PowerFx.Dataverse.Tests.csproj
+++ b/src/PowerFx.Dataverse.Tests/PowerFx.Dataverse.Tests.csproj
@@ -49,6 +49,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\src\PowerFx.Dataverse.Eval\Microsoft.PowerFx.Dataverse.Eval.csproj" />
     <ProjectReference Include="..\..\src\PowerFx.Dataverse\PowerFx.Dataverse.csproj" />
+    <ProjectReference Include="..\Microsoft.PowerFx.Dataverse.Sql\Microsoft.PowerFx.Dataverse.Sql.csproj" />
     <ProjectReference Include="..\PowerFx.Dataverse.Mock\Microsoft.Dataverse.EntityMock.csproj" />
   </ItemGroup>
 
