--- a/src/PowerFx.Dataverse.Mock/Microsoft.Dataverse.EntityMock.csproj
+++ b/src/PowerFx.Dataverse.Mock/Microsoft.Dataverse.EntityMock.csproj
@@ -5,6 +5,14 @@
     <RootNamespace>Microsoft.Dataverse.Mock</RootNamespace>
   </PropertyGroup>
 
+  <PropertyGroup>
+    <SignAssembly>true</SignAssembly>
+    <DelaySign>true</DelaySign>
+    <AssemblyOriginatorKeyFile>..\35MSSharedLib1024.snk</AssemblyOriginatorKeyFile>
+    <NoWarn>1702;1998;NU5104;NU1701;NU1605</NoWarn>
+    <LangVersion>9.0</LangVersion>
+  </PropertyGroup>
+  
   <ItemGroup>
     <PackageReference Include="Microsoft.CrmSdk.CoreAssemblies" Version="9.0.2.33" />
   </ItemGroup>
