Allow to evaluate expressions with plugins calls

--- a/src/PowerFx.Dataverse.Tests/PowerFx.Dataverse.Tests.csproj
+++ b/src/PowerFx.Dataverse.Tests/PowerFx.Dataverse.Tests.csproj
@@ -67,6 +67,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Include="Swagger\MSNWeather.json" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Update="Docs\DataverseFormulaColumns.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
