--- a/src/PowerFx.Dataverse.Tests/PowerFx.Dataverse.Tests.csproj
+++ b/src/PowerFx.Dataverse.Tests/PowerFx.Dataverse.Tests.csproj
@@ -72,4 +72,10 @@
     </None>
   </ItemGroup>
 
+  <ItemGroup>
+    <Content  Include="DelegationTests\IRSnapShots\**">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content >
+  </ItemGroup>
+
 </Project>
