Upgrade Newtonsoft.Json from version 10 (coming from Microsof.Rest.ClientRuntime) to version 13

--- a/src/PowerFx.Dataverse/PowerFx.Dataverse.csproj
+++ b/src/PowerFx.Dataverse/PowerFx.Dataverse.csproj
@@ -31,6 +31,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.PowerFx.Dataverse.Parser" Version="$(DataverseParserVersion)" />
     <PackageReference Include="Microsoft.Rest.ClientRuntime" Version="2.3.24" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="System.Text.Json" Version="6.0.8" />
     <PackageReference Include="System.Collections.Immutable" Version="6.0.0" />
     <PackageReference Include="Microsoft.PowerFx.Core" Version="$(PowerFxVersion)" />
