--- a/src/PowerFx.Dataverse.Tests/PowerFx.Dataverse.Tests.csproj
+++ b/src/PowerFx.Dataverse.Tests/PowerFx.Dataverse.Tests.csproj
@@ -34,6 +34,7 @@
     <PackageReference Include="System.Runtime" Version="4.3.0" />
     <PackageReference Include="Microsoft.PowerFx.Core" Version="$(PowerFxVersion)" />
     <PackageReference Include="Microsoft.PowerFx.Interpreter" Version="$(PowerFxVersion)" />
+    <PackageReference Include="Microsoft.PowerFx.Connectors" Version="$(PowerFxVersion)" />
     <PackageReference Include="Microsoft.PowerFx.Core.Tests" Version="$(PowerFxVersion)" GeneratePathProperty="true" />
     <PackageReference Include="Microsoft.PowerFx.LanguageServerProtocol" Version="$(PowerFxVersion)" />
     <PackageReference Include="Microsoft.PowerFx.Json" Version="$(PowerFxVersion)" />
@@ -51,6 +52,7 @@
     <ProjectReference Include="..\..\src\PowerFx.Dataverse\PowerFx.Dataverse.csproj" />
     <ProjectReference Include="..\Microsoft.PowerFx.Dataverse.Sql\Microsoft.PowerFx.Dataverse.Sql.csproj" />
     <ProjectReference Include="..\PowerFx.Dataverse.Mock\Microsoft.Dataverse.EntityMock.csproj" />
+    <ProjectReference Include="..\Microsoft.PowerFx.AzureStorage\Microsoft.PowerFx.AzureStorage.csproj" />
   </ItemGroup>
 
   <ItemGroup>
