--- a/src/Build.props
+++ b/src/Build.props
@@ -3,9 +3,10 @@
 
   <PropertyGroup>
     <!-- https://github.com/microsoft/Power-Fx/commit/22c1f7183787b4abac43f04f511dddaa26510ce8 -->
-    <PowerFxVersion>1.3.0-build.20240417-1001</PowerFxVersion>    
-    
-      <!-- https://msazure.visualstudio.com/OneAgile/_artifacts/feed/PowerApps-Studio-Official/NuGet/Microsoft.PowerFx.Dataverse.Parser       -->
+    <!-- Temporary version, not to be kept for final merge -->
+    <PowerFxVersion>1.3.0-build.20240429-0001</PowerFxVersion>    
+
+    <!-- https://msazure.visualstudio.com/OneAgile/_artifacts/feed/PowerApps-Studio-Official/NuGet/Microsoft.PowerFx.Dataverse.Parser       -->
     <DataverseParserVersion>0.1.0-ci-20230930-80527585</DataverseParserVersion>
   </PropertyGroup>
 
