--- a/src/Microsoft.PowerFx.AzureStorage/Microsoft.PowerFx.AzureStorage.csproj
+++ b/src/Microsoft.PowerFx.AzureStorage/Microsoft.PowerFx.AzureStorage.csproj
@@ -31,6 +31,7 @@
     <PackageReference Include="System.Text.Json" Version="6.0.8" />
     <PackageReference Include="System.Collections.Immutable" Version="6.0.0" />
     <PackageReference Include="System.ServiceModel.Primitives" Version="4.10.0" />
+    <PackageReference Include="System.Formats.Asn1" Version="8.0.1" />
     <PackageReference Include="Microsoft.PowerFx.Core" Version="$(PowerFxVersion)" NoWarn="NU1605" />
 
     <PackageReference Include="Azure.Data.Tables" Version="12.8.3" />
