--- a/nuget.config
+++ b/nuget.config
@@ -1,8 +1,9 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <packageSources>
     <clear />
     <add key="Power-Fx" value="https://msazure.pkgs.visualstudio.com/_packaging/Power-Fx/nuget/v3/index.json" />
+    <add key="removeIt" value="C:\Jas\Power-FX\src\outputpackages" />
   </packageSources>
   <disabledPackageSources>
     <clear />
