--- a/src/Build.props
+++ b/src/Build.props
@@ -3,7 +3,7 @@
 
   <PropertyGroup>
     <!-- https://github.com/microsoft/Power-Fx/commit/fd50fe1a2da3a6c84cc200d50190c2d940ce76a1 -->
-    <PowerFxVersion>1.3.0-build.20240812-1001</PowerFxVersion>    
+    <PowerFxVersion>1.99.0-local</PowerFxVersion>    
     
       <!-- https://msazure.visualstudio.com/OneAgile/_artifacts/feed/PowerApps-Studio-Official/NuGet/Microsoft.PowerFx.Dataverse.Parser       -->
     <DataverseParserVersion>0.1.0-ci-20230930-80527585</DataverseParserVersion>
